Closed Bug 720511 Opened 14 years ago Closed 14 years ago

arr.join("") doesn't always let indexed properties on the prototype show through

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: Waldo, Assigned: Waldo)

References

Details

(Keywords: addon-compat)

Attachments

(1 file)

Attached patch Patch with testsSplinter Review
Nitpicky spec compliance issue, noticed in passing while reading other code.
Attachment #590870 - Flags: review?(luke)
Comment on attachment 590870 [details] [diff] [review] Patch with tests >+ const Value *iter; 'iter' is often the name for the iterator object so I was a bit confused when I first looked at the code. How about 'elem'? >+ if (iter->isObject()) >+ break; Could you prefix this with a short comment about why the test is necessary?
Attachment #590870 - Flags: review?(luke) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Okay, this is kind of ridiculous, but I did some searching, and I actually found a site which breaks because of join("") not exposing prototyped properties. (I know, right?) I talked to akeybl about it, and he was okay taking this on aurora, so I landed it there: https://hg.mozilla.org/releases/mozilla-aurora/rev/1a931c313611 The things the web does, srsly...
Aurora is Fx11 right now? Shouldn't we change the target date?
Doesn't hurt to change it, no, I guess. Version numbering in bugs is a bit fuzzy, and arguably setting the version and all that, given that we have multiple versions in flight at once, is mostly an attractive nuisance. Notwithstanding comment 4, I doubt we need to document this. And I doubt that even if we did document it, the people who would be affected by this bug would read our documentation such that they'd benefit from an improvement in this regard.
Keywords: dev-doc-needed
Target Milestone: mozilla12 → mozilla11
Blocks: 720079
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: