Bug 720511 - Make sure indexed elements on prototypes of an array being joined show through in the final join-string.  r=luke

--HG--
extra : rebase_source : 9979fa265e18e347fb0406c39044bce6fa183aef